# frametee

./: .gitignore  CMakeLists.txt  README.md  ddnet_frametee.sh  frametee.sh  test_uf_fast.ftee
.github/workflows/: build.yml
data/shaders/: skin.frag.glsl
docs/: UI_UX_STYLE_GUIDE.md
plugins/random_input_filler/: random_input_filler.c
src/: main.c  types.h
src/particles/: particle_system.c  particle_system.h
src/physics/: physics.c
src/plugins/: api_impl.c  plugin_api.h
src/renderer/: dump_helper.h  graphics_backend.c  graphics_backend.h  renderer.c  renderer.h
src/scripting/: script_engine.c  script_engine.h
src/system/: config.c  fs.c  fs.h  save.c  save.h
src/system/skin/: skin_fetch.c  skin_fetch.h
src/user_interface/: demo.c  demo.h  keybinds.c  player_info.c  player_info.h  skin_browser.c  skin_browser.h  snippet_editor.c  user_interface.c  user_interface.h
src/user_interface/timeline/: timeline_commands.c  timeline_commands.h  timeline_interaction.c  timeline_model.c  timeline_model.h  timeline_renderer.c  timeline_types.h
